# library-template

./: README.md  meson.build
src/: main.c
tests/: example.au
